syntax = "proto3";

package discovery.protos;

service RegistryService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Unregister(UnregisterRequest) returns (UnregisterResponse) {}
}

service RegistrantService {
    rpc HeartBeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}

message RegisterRequest {
    string controlAddress = 1;
    string serviceName = 2;
    string serviceBalancerAddress = 3;
    string serviceLocalAddress = 4;
}

message RegisterResponse {
    string Message = 1;
    bool Success = 2;
    repeated Error Errors = 3;
}

message UnregisterRequest {
    string serviceName = 1;
    string controlAddress = 2;
}

message UnregisterResponse {
    string Message = 1;
    bool Success = 2;
    repeated Error Errors = 3;
}

message HeartbeatRequest {
    string Message = 1;
}

message HeartbeatResponse {
    string Message = 1;
    bool Success = 2;
    repeated Error Errors = 3;
}

message Error {
   uint32 Code = 1;
   string Message = 2;
}